--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite\" \"json-server --watch db.json --port 3000\"",
+    "dev": "concurrently \"vite\" \"json-server db.json -m ./node_modules/json-server-auth\"", 
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@hookform/resolvers": "^3.9.1",
     "axios": "^1.7.8",
+    "concurrently": "^9.1.0",
     "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.1"
+    "react-hook-form": "^7.53.2",
+    "react-router-dom": "^7.0.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
