--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.8",
     "concurrently": "^9.1.0",
     "json-server": "^0.17.0",
@@ -20,7 +21,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.54.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
     "zod": "^3.23.8"
   },
