--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_API_KEY="
 971866358789422"
 VITE_API_SECRET="_pkYAqBxK46PueooRgUwwp6ufUm4"
 VITE_UPLOAD_PRESET="ReactJS"
+VITE_API_URL=http://localhost:9999/api
